--- a/index.html
+++ b/index.html
@@ -4,78 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>pagina amazon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav>
-        <img class="logo" src="./materiali/logo.png" alt="logo" />
-    </nav>
-    <div class="first-line">
-        <p>Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></p>
-    </div>
-    <div class="container">
+    <header>
         <div>
-            <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
+            <img id="logo" src="./img/logo.png" alt="logo">
         </div>
-        <div>
-            <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will become your new favorite holiday starter!</p>
-        </div>
-        <div >
-            <img class="image" src="./materiali/immagine.webp" alt="immagine focaccia"/>
-        </div>
-        <div class="autor-img">
-            <h4>Image: Sally Vegas</h4>
-        </div>
-        <div class="underimg">
-            <h4 class="orange">FEATURED IN</h4>
-            <h4 class="green">Fresh Cranberry Recipes That Go Beyond Sauce</h4>
-        </div>
-        <div class="Ingredients">
-            <p>Ingredients</p>
-        </div>
-        <hr class="divisore">
-        <div>
-            <h2>For the focaccia:</h2>
-        </div>
-        <div class="first-list">
-            <ul>
-                <li>4 cups (500g) all-purpose flour</li>
-                <li>1 1/2 teaspoons instant yeast</li>
-                <li>1 1/2 teaspoons salt</li>
-                <li>1 3/4 cups (350g) lukewarm water</li>
-                <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
-            </ul>
-        <div class="title-second-list">
-            <h2>For the topping:</h2>
-        </div>
-        <div class="second-list">
-            <ul>
-                <li>3 medium yellow onions, thinly sliced</li>
-                <li>1 tablespoon balsamic vinegar</li>
-                <li>1-2 tablespoons olive oil, for brushing on top</li>
-                <li>10 ounces brie, cut into cubes (scrape rind off with a paring knife if desired, though it’s not necessary)</li>
-                <li>1 1/2 cups fresh or frozen cranberries
-                </li>
-            </ul>
-        </div>    
-        <div class="method">
-            <p>Method</p>
-        </div>
-        <hr>
-        <div>
-            <ol>
-                <li>Make the focaccia dough</li>
-            </ol>
-        </div>
-        <div class="last-text">In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...
-        </div>
-        <div class="last-line"> Read more on
-            <a href="https://www.simplyrecipes.com/recipes/focaccia_with_caramelized_onions_cranberries_and_brie/"> Simply Recipes</a>
-        </div>
-    </div>
-
+        <nav>
+            <a href="#">All</a>
+            <a href="#">Today's deals</a>
+            <a href="#">Customer Service</a>
+            <a href="#">Registry</a>
+            <a href="#">Gift Card</a>
+            <a href="#">Sell</a>
+        </nav>
+    </header>
 </body>
+<main>
+    <div id="gift">
+        <p>Shops All Holiday Gift Cards</p>
+    </div>
+    <div id="Holiday">
+        <h2>Holyday Gift Guides</h2>
+        <p>Be a go-gifter</p>
+    </div>
+   <section class="container">
+        <p id="titoli">Find the perfect gift   <span>Shop now</span></p>
+        <div >
+            <img class="img" src="./img/kindle.jpg" alt="immagine kindle">
+            <img class="img" src="./img/pc.jpg" alt="immagine scrivania">
+            <img class="img" src="./img/orologi.jpg" alt="immagine orologi">
+            <img class="img" src="./img/canegatto.jpg" alt="immagine cane e gatto">
+        </div>
+   </section>
+<div>
+    <img class="vr" src="./img/visore.png" alt="immagine visore">
+</div>
+<div class="text">
+    <p>Play the gitting game <span>Shop Gaming</span></p>
+</div>
+<div>
+    <img class="marshall" src="./img/cuffiecassa.png" alt="immagine dispositvi audio">
+</div>
+<div class="text">
+    <p>The sound of cheer <span>Shop Audio & Accessories</span></p>
+</div>
+</main>
+<div class="last-line">
+    <a href="#">Back to top</a>
+</div>
+<div class="container-logo">
+    <img class="last-logo" src="./img/logo.png" alt="logo amazon">
+</div>
 
 </html>
